--- a/config/content.htm
+++ b/config/content.htm
@@ -42,7 +42,7 @@
 <p>What is a content management system?</p>
 <p>Analyzing your information life cycle.</p>
 <p>Overview of enterprise content management.</p>
-<h2><span>Git</span></h2>
+<h2>Git</h2>
 <p><span>Login to your gm email account and download<span> </span><a href="https://drive.google.com/file/d/1YkLWsDVRlScSuSBQv2Aa1JSjvbydJli-/view?usp=sharing">IntroductionToVersionControlAndGit.pdf</a>.</span></p>
 <p><span>What is version control?</span></p>
 <p><span>Git installation and setup.</span></p>
@@ -240,7 +240,6 @@
 <div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto"></div>
 </div>
-<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <div dir="auto">課堂小單字</div>
 <div dir="auto">shell 殼</div>
 <div dir="auto">interface 介面</div>
@@ -895,14 +894,48 @@
 <p>與 Ubuntu 20.04 類似.</p>
 <h2>w15-18統整</h2>
 <p>將 W1-W14 週的所有上課內容, 以圖文及影音資料加以整理在個人及分組倉儲、網站及簡報外,還要自選另一主題, 將分組協同的過程與內容整理在個人與分組的倉儲資料中.</p>
-<h2>分組討論之內容</h2>
-<p>分組討論</p>
+<h1>分組主題報告</h1>
+<p>智慧型手表</p>
+<p><img alt="全球智慧手錶市佔排名洗牌！蘋果稱霸、Android 用戶最愛品牌是它 ..." height="247" src="https://img.ltn.com.tw/Upload/3c/page/2019/05/03/190503-36651-1.jpg" width="422"/></p><h2>智慧型手錶</h2>
+<h3>智慧型手錶的歷史</h3>
+<h4 class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql"><br/>早期</h4>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <p></p>
 <p></p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p><br/>1972年，第一個開發手腕計算技術的日本精工公司，首次發表第一款數位手錶，稱脈波星，由漢彌爾頓鐘錶公司所製造。「脈波星」被精工在1978年收購後成為一個品牌的名字。<br/>1982年，脈波星手錶（NL C01）發布，它可以儲存24個數位，使其成為可能是第一款用戶可自我編寫記憶體的手錶，或者叫做「記憶銀行」手錶。<br/>1983年，隨著個人電腦在20世紀80年代被引進，精工開始發展手錶的計算能力。2000資料手錶（1983年）有著一個外部鍵盤。資料通過鍵盤輸入進手錶。它的名字源於它能夠儲存2000個字元。D409是精工第一款直接在主機板上輸入資料的模式（通過一個微型鍵盤）和獨特的點陣顯示。Its memory was tiny, at only 112 digits.它於1984年發布的金、銀和黑色三個版本。在20世紀80年代最引人注目的是精工的「RC系列」：從1980年代開始，卡西歐除了做成計算機手錶外，還成功的做成了「電腦手錶」。最引人注目的是卡西歐資料銀行系列。此公司也生產例如Nelsonic遊戲手錶等一些「遊戲手錶」。<br/>精工RC系列<br/>1984年，精工發布第一個與電腦有關的模型，RC-1000腕部終端它相容於當時最流行的電腦，包括蘋果II代、II+代及IIe、the Commodore 64、IBM PC、NEC 8201、Tandy Color Computer、Model 1000、1200、2000和TRS-80 Model I、III、4及4p。<br/>1985年，精工發布第二個RC-20腕部電腦，它有著SMC84C00 8-位 Z-80 微處理器；8K的ROM和2K的RAM。他有著日程、備忘錄、世界時間和四種功能的計算機應用程式。它有著42x32像素的點陣式液晶顯示，並且更重要的是它是觸控式螢幕。同樣相似於RC-1000，它可以通過專用電纜連接到個人電腦。它是可程式化的，但是它的顯示器過小和儲存空間不足嚴重限制了應用程式的開發。<br/>1985年，而RC-4000 PC資料圖同樣於1985年發布，被稱為「世界上最小的電腦終端」。他有著2K的儲存空間。RC-4500（1985年），也被稱為腕部MAC，它有著鮮艷、明亮的顏色。</p>
+<h4><br/>功能</h4>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p><br/>GPS功能<br/>GPS跟蹤裝置可以用來完成歷史資料的記錄，然後將資料上傳到電腦或網際網路上並建立一個紀錄檔進行之前練習活動的分析。<br/>此外，一些智慧型手錶有著全GPS導航儀，它擁有一個可以即時顯示地圖及當前坐標的螢幕，使用hh.mm.mmmm（小時，分鐘和分鐘的小數位）與GPS坐標格式。用戶可以通過「Mark（標記）」他們的當前位置，然後編輯這個條目的名稱和坐標，從而建立新的導航。</p>
+<h2>系統區別</h2>
+Linux手錶<br/>在2000年6月，IBM展示了一個執行於Linux的手錶原型。原始版本僅僅有6個小時的續航時間，後來改進版延長為了12個小時。它擁有8MB的記憶體，執行Linux2.2。該裝置後來增加了感應加速度、震動機制與指紋感測器。IBM開始與西鐵城鐘錶有限公司合夥打造「WatchPad」。WatchPad1.5版有著320 x 240QVGA解析度，且執行Linux 2.4系統。它還具有行事曆程式、藍牙、8MB的暫存空間與16MB的快閃記憶體空間。西鐵城把市場瞄向了學生和商人，並把該手錶的零售價定為399美元。然而在2001至2002年的某個時間，該專案被終止了。
+<h3>Android</h3>
+<p><span>Android，中文常譯作安卓或安致，是一個基於Linux核心的開放原始碼行動作業系統，由Google成立的開放手機聯盟持續領導與開發，主要設計用於觸控螢幕行動裝置如智慧型手機和平板電腦與其他可攜式裝置。</span></p>
+<h3>watchOS</h3>
+<p>蘋果公司在2015年正式發售的Apple Watch中首次使用了該系統。</p>
+<h2>現代智慧型手錶名單</h2>
+<p>in the 1970s，計算機手錶<br/>推出日期：1994年，TIMEX資料鏈系列<br/>開發日期：1998年，Ruputer（也被稱作「掌上PC」） – 一個有著2/4MB的臨時儲存空間的電腦。有著128kb RAM及3.6mhz的16-位CPU。可顯灰度螢幕。通過序列埠/序列紅外收發器連接電腦。2 x 2016或2032電池，1個月的電池壽命。應用程式包括電子試算表和記事本，以及各種遊戲。<br/>發布日期：2003年，Fossil腕部PDA – 此手錶可以執行Palm4作業系統且有8M內部儲存空間，資料儲存是暫時的，如果電量耗盡，那麼所有資料將遺失。可以通過MicroUSB以及紅外線與電腦連接。此表擁有顯示灰階的觸控式螢幕，龍珠 VZ CPU @ 55mhz。<br/>推出日期：2003年，Garmin先驅<br/>推出日期：2009年Q4，LG GD910（限量版）<br/>發布日期：2010年9月，第六代IPod nano - 有一個可拆卸的支架、用於固定手錶的錶帶和媒體播放器（電池可以連續使用1天，可以作為手錶使用）。<br/>發布日期：2012年第一季度，Sony SmartWatch 1 (第一代)<br/>發布日期：2012年9月，MetaWatch Strata<br/>發布日期：2013年6月，Sony SmartWatch 2<br/>發布日期：2013年7月，Pebble: E-paper手錶 - 這款手錶擁有電動遊戲，可以更改手錶介面，還可以收到文字（通過指定應用程式傳送），更可以告訴你有電話打進來了。手機用藍牙傳輸資料，電池可以連續使用達1個星期（升級版電池可以連續使用2至3周）。這款手錶目前正在批次生產中。<br/>海王星松樹（Neptune Pine） - 一個可以說是完全獨立的Android智慧型手錶，有3G、GPS、802.11 Wi-Fi、藍牙等等很多功能。<br/>Nike+ FuelBand與其他的NikeFuel ，如Nike+ SportWatch GPS裝置。<br/>i'm WATCH<br/>Samsung Galaxy Gear<br/>WIMM One（30小時）<br/>Suunto專門為訓練、潛水以及戶外運動設計的運動手錶。<br/>摩托羅拉Motoactv<br/>Cookoo<br/>Agent<br/>KREYOS<br/>Trakdot U1<br/>ZGPAX S5 android 4.0.3 CPU 1G/RAM:512M/HD:4G battery 500ma<br/>in watch_Z android 4.2 CPU 1.2G/RAM:1G/HD:8G battery 500ma<br/>simValley AW412 android 4.22 CPU 1.3G/RAM:1G/HD:4G battery 600ma<br/>gear watch android 4.1 CPU 1G/RAM:1G/HD:4G battery 330ma<br/>迪威諾 DS6 android 4 CPU 1G/RAM:128M/HD:4G battery 330ma<br/>愛酷 IK8 android 4 CPU 1G/RAM:512M/HD:4G battery 700ma<br/>Iradish I6 android 4.0.4 CPU 1G/RAM:512M/HD:4G battery 500ma<br/>Omate TrueSmart<br/>Z Watch<br/>蘋果手錶<br/>華為手錶<br/>華米手錶(大陸小米轉投資)<br/>小米手錶</p>
+<p></p>
+<h2>通俗文化</h2>
+<p>20世紀40年代的卡通人物迪克·崔西有著一個可以接受及發射訊號的的手腕電台，它一直被視為現代智慧型手錶的先驅。</p>
+<p>在1982年的電視連續劇霹靂遊俠中，主角麥可·奈特戴著可以雙向通訊的手錶。</p>
+<p></p>
+<p></p>
+<p></p></div></div></div></div></div></div></div>
