--- a/content/Android.html
+++ b/content/Android.html
@@ -154,16 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop<br /><h1>利用 cmsimde 建立靜態網誌方法</h1>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
+    <div id="tipue_search_content">系統區別 << <a href='系統區別.html'>Previous</a> <a href='watchOS.html'>Next</a> >> watchOS<br /><h1>Android</h1>
+<p><span>Android，中文常譯作安卓或安致，是一個基於Linux核心的開放原始碼行動作業系統，由Google成立的開放手機聯盟持續領導與開發，主要設計用於觸控螢幕行動裝置如智慧型手機和平板電腦與其他可攜式裝置。</span></p>
+<br />系統區別 << <a href='系統區別.html'>Previous</a> <a href='watchOS.html'>Next</a> >> watchOS</div>
         
     <!-- footer -->
       <div class="container">
