--- a/content/智慧型手錶的歷史.html
+++ b/content/智慧型手錶的歷史.html
@@ -154,16 +154,34 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop<br /><h1>利用 cmsimde 建立靜態網誌方法</h1>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
+    <div id="tipue_search_content">智慧型手錶 << <a href='智慧型手錶.html'>Previous</a> <a href='系統區別.html'>Next</a> >> 系統區別<br /><h1>智慧型手錶的歷史</h1>
+<h4 class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql"><br/>早期</h4>
+<div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p><br/>1972年，第一個開發手腕計算技術的日本精工公司，首次發表第一款數位手錶，稱脈波星，由漢彌爾頓鐘錶公司所製造。「脈波星」被精工在1978年收購後成為一個品牌的名字。<br/>1982年，脈波星手錶（NL C01）發布，它可以儲存24個數位，使其成為可能是第一款用戶可自我編寫記憶體的手錶，或者叫做「記憶銀行」手錶。<br/>1983年，隨著個人電腦在20世紀80年代被引進，精工開始發展手錶的計算能力。2000資料手錶（1983年）有著一個外部鍵盤。資料通過鍵盤輸入進手錶。它的名字源於它能夠儲存2000個字元。D409是精工第一款直接在主機板上輸入資料的模式（通過一個微型鍵盤）和獨特的點陣顯示。Its memory was tiny, at only 112 digits.它於1984年發布的金、銀和黑色三個版本。在20世紀80年代最引人注目的是精工的「RC系列」：從1980年代開始，卡西歐除了做成計算機手錶外，還成功的做成了「電腦手錶」。最引人注目的是卡西歐資料銀行系列。此公司也生產例如Nelsonic遊戲手錶等一些「遊戲手錶」。<br/>精工RC系列<br/>1984年，精工發布第一個與電腦有關的模型，RC-1000腕部終端它相容於當時最流行的電腦，包括蘋果II代、II+代及IIe、the Commodore 64、IBM PC、NEC 8201、Tandy Color Computer、Model 1000、1200、2000和TRS-80 Model I、III、4及4p。<br/>1985年，精工發布第二個RC-20腕部電腦，它有著SMC84C00 8-位 Z-80 微處理器；8K的ROM和2K的RAM。他有著日程、備忘錄、世界時間和四種功能的計算機應用程式。它有著42x32像素的點陣式液晶顯示，並且更重要的是它是觸控式螢幕。同樣相似於RC-1000，它可以通過專用電纜連接到個人電腦。它是可程式化的，但是它的顯示器過小和儲存空間不足嚴重限制了應用程式的開發。<br/>1985年，而RC-4000 PC資料圖同樣於1985年發布，被稱為「世界上最小的電腦終端」。他有著2K的儲存空間。RC-4500（1985年），也被稱為腕部MAC，它有著鮮艷、明亮的顏色。</p>
+<h4><br/>功能</h4>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p><br/>GPS功能<br/>GPS跟蹤裝置可以用來完成歷史資料的記錄，然後將資料上傳到電腦或網際網路上並建立一個紀錄檔進行之前練習活動的分析。<br/>此外，一些智慧型手錶有著全GPS導航儀，它擁有一個可以即時顯示地圖及當前坐標的螢幕，使用hh.mm.mmmm（小時，分鐘和分鐘的小數位）與GPS坐標格式。用戶可以通過「Mark（標記）」他們的當前位置，然後編輯這個條目的名稱和坐標，從而建立新的導航。</p>
+<br />智慧型手錶 << <a href='智慧型手錶.html'>Previous</a> <a href='系統區別.html'>Next</a> >> 系統區別</div>
         
     <!-- footer -->
       <div class="container">
