--- a/content/通俗文化.html
+++ b/content/通俗文化.html
@@ -154,16 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop<br /><h1>利用 cmsimde 建立靜態網誌方法</h1>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
+    <div id="tipue_search_content">現代智慧型手錶名單 << <a href='現代智慧型手錶名單.html'>Previous</a> <br /><h1>通俗文化</h1>
+<p>20世紀40年代的卡通人物迪克·崔西有著一個可以接受及發射訊號的的手腕電台，它一直被視為現代智慧型手錶的先驅。</p>
+<p>在1982年的電視連續劇霹靂遊俠中，主角麥可·奈特戴著可以雙向通訊的手錶。</p>
+<p></p>
+<p></p>
+<p></p></div></div></div></div></div></div></div><br />現代智慧型手錶名單 << <a href='現代智慧型手錶名單.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
