--- a/content/智慧型手錶.html
+++ b/content/智慧型手錶.html
@@ -154,16 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop<br /><h1>利用 cmsimde 建立靜態網誌方法</h1>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
+    <div id="tipue_search_content">分組主題報告 << <a href='分組主題報告.html'>Previous</a> <a href='智慧型手錶的歷史.html'>Next</a> >> 智慧型手錶的歷史<br /><h1>智慧型手錶</h1>
+<br />分組主題報告 << <a href='分組主題報告.html'>Previous</a> <a href='智慧型手錶的歷史.html'>Next</a> >> 智慧型手錶的歷史</div>
         
     <!-- footer -->
       <div class="container">
