--- a/content/系統區別.html
+++ b/content/系統區別.html
@@ -154,16 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop<br /><h1>利用 cmsimde 建立靜態網誌方法</h1>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules</p>
-<br />有關本網站 << <a href='有關本網站.html'>Previous</a> <a href='Develop.html'>Next</a> >> Develop</div>
+    <div id="tipue_search_content">智慧型手錶的歷史 << <a href='智慧型手錶的歷史.html'>Previous</a> <a href='Android.html'>Next</a> >> Android<br /><h1>系統區別</h1>
+Linux手錶<br/>在2000年6月，IBM展示了一個執行於Linux的手錶原型。原始版本僅僅有6個小時的續航時間，後來改進版延長為了12個小時。它擁有8MB的記憶體，執行Linux2.2。該裝置後來增加了感應加速度、震動機制與指紋感測器。IBM開始與西鐵城鐘錶有限公司合夥打造「WatchPad」。WatchPad1.5版有著320 x 240QVGA解析度，且執行Linux 2.4系統。它還具有行事曆程式、藍牙、8MB的暫存空間與16MB的快閃記憶體空間。西鐵城把市場瞄向了學生和商人，並把該手錶的零售價定為399美元。然而在2001至2002年的某個時間，該專案被終止了。
+<br />智慧型手錶的歷史 << <a href='智慧型手錶的歷史.html'>Previous</a> <a href='Android.html'>Next</a> >> Android</div>
         
     <!-- footer -->
       <div class="container">
