--- a/content/分組主題報告.html
+++ b/content/分組主題報告.html
@@ -156,7 +156,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w15-18統整 << <a href='w15-18統整.html'>Previous</a> <a href='智慧型手錶.html'>Next</a> >> 智慧型手錶<br /><h1>分組主題報告</h1>
 <p>智慧型手表</p>
-<p><img alt="全球智慧手錶市佔排名洗牌！蘋果稱霸、Android 用戶最愛品牌是它 ..." height="247" src="https://img.ltn.com.tw/Upload/3c/page/2019/05/03/190503-36651-1.jpg" width="422"/></p><br />w15-18統整 << <a href='w15-18統整.html'>Previous</a> <a href='智慧型手錶.html'>Next</a> >> 智慧型手錶</div>
+<p><img alt="全球智慧手錶市佔排名洗牌！蘋果稱霸、Android 用戶最愛品牌是它 ..." height="247" src="https://img.ltn.com.tw/Upload/3c/page/2019/05/03/190503-36651-1.jpg" width="422"/></p>
+<br />w15-18統整 << <a href='w15-18統整.html'>Previous</a> <a href='智慧型手錶.html'>Next</a> >> 智慧型手錶</div>
         
     <!-- footer -->
       <div class="container">
