--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -933,7 +933,8 @@ Linux手錶<br/>在2000年6月，IBM展示了一個執行於Linux的手錶原型
 <h2>現代智慧型手錶名單</h2>
 <p>in the 1970s，計算機手錶<br/>推出日期：1994年，TIMEX資料鏈系列<br/>開發日期：1998年，Ruputer（也被稱作「掌上PC」） – 一個有著2/4MB的臨時儲存空間的電腦。有著128kb RAM及3.6mhz的16-位CPU。可顯灰度螢幕。通過序列埠/序列紅外收發器連接電腦。2 x 2016或2032電池，1個月的電池壽命。應用程式包括電子試算表和記事本，以及各種遊戲。<br/>發布日期：2003年，Fossil腕部PDA – 此手錶可以執行Palm4作業系統且有8M內部儲存空間，資料儲存是暫時的，如果電量耗盡，那麼所有資料將遺失。可以通過MicroUSB以及紅外線與電腦連接。此表擁有顯示灰階的觸控式螢幕，龍珠 VZ CPU @ 55mhz。<br/>推出日期：2003年，Garmin先驅<br/>推出日期：2009年Q4，LG GD910（限量版）<br/>發布日期：2010年9月，第六代IPod nano - 有一個可拆卸的支架、用於固定手錶的錶帶和媒體播放器（電池可以連續使用1天，可以作為手錶使用）。<br/>發布日期：2012年第一季度，Sony SmartWatch 1 (第一代)<br/>發布日期：2012年9月，MetaWatch Strata<br/>發布日期：2013年6月，Sony SmartWatch 2<br/>發布日期：2013年7月，Pebble: E-paper手錶 - 這款手錶擁有電動遊戲，可以更改手錶介面，還可以收到文字（通過指定應用程式傳送），更可以告訴你有電話打進來了。手機用藍牙傳輸資料，電池可以連續使用達1個星期（升級版電池可以連續使用2至3周）。這款手錶目前正在批次生產中。<br/>海王星松樹（Neptune Pine） - 一個可以說是完全獨立的Android智慧型手錶，有3G、GPS、802.11 Wi-Fi、藍牙等等很多功能。<br/>Nike+ FuelBand與其他的NikeFuel ，如Nike+ SportWatch GPS裝置。<br/>i'm WATCH<br/>Samsung Galaxy Gear<br/>WIMM One（30小時）<br/>Suunto專門為訓練、潛水以及戶外運動設計的運動手錶。<br/>摩托羅拉Motoactv<br/>Cookoo<br/>Agent<br/>KREYOS<br/>Trakdot U1<br/>ZGPAX S5 android 4.0.3 CPU 1G/RAM:512M/HD:4G battery 500ma<br/>in watch_Z android 4.2 CPU 1.2G/RAM:1G/HD:8G battery 500ma<br/>simValley AW412 android 4.22 CPU 1.3G/RAM:1G/HD:4G battery 600ma<br/>gear watch android 4.1 CPU 1G/RAM:1G/HD:4G battery 330ma<br/>迪威諾 DS6 android 4 CPU 1G/RAM:128M/HD:4G battery 330ma<br/>愛酷 IK8 android 4 CPU 1G/RAM:512M/HD:4G battery 700ma<br/>Iradish I6 android 4.0.4 CPU 1G/RAM:512M/HD:4G battery 500ma<br/>Omate TrueSmart<br/>Z Watch<br/>蘋果手錶<br/>華為手錶<br/>華米手錶(大陸小米轉投資)<br/>小米手錶</p>
 <p></p>
-<p><br/>通俗文化<br/>20世紀40年代的卡通人物迪克·崔西有著一個可以接受及發射訊號的的手腕電台，它一直被視為現代智慧型手錶的先驅。</p>
+<h2>通俗文化</h2>
+<p>20世紀40年代的卡通人物迪克·崔西有著一個可以接受及發射訊號的的手腕電台，它一直被視為現代智慧型手錶的先驅。</p>
 <p>在1982年的電視連續劇霹靂遊俠中，主角麥可·奈特戴著可以雙向通訊的手錶。</p>
 <p></p>
 <p></p>
