--- a/content/功能.html
+++ b/content/功能.html
@@ -154,9 +154,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">IPv4 << <a href='IPv4.html'>Previous</a> <a href='紙本筆記.html'>Next</a> >> 紙本筆記<br /><h1>IPv6</h1>
-<p><span>IPv6，他所能提供的ip位置遠遠超過IPv4的數量，簡單來說，轉換到IPv6後ip位置的數量幾乎不可能用完。</span></p>
-<br />IPv4 << <a href='IPv4.html'>Previous</a> <a href='紙本筆記.html'>Next</a> >> 紙本筆記</div>
+    <div id="tipue_search_content">智慧型手錶的歷史 << <a href='智慧型手錶的歷史.html'>Previous</a> <a href='系統區別.html'>Next</a> >> 系統區別<br /><h1>功能</h1>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p><br/>GPS功能<br/>GPS跟蹤裝置可以用來完成歷史資料的記錄，然後將資料上傳到電腦或網際網路上並建立一個紀錄檔進行之前練習活動的分析。<br/>此外，一些智慧型手錶有著全GPS導航儀，它擁有一個可以即時顯示地圖及當前坐標的螢幕，使用hh.mm.mmmm（小時，分鐘和分鐘的小數位）與GPS坐標格式。用戶可以通過「Mark（標記）」他們的當前位置，然後編輯這個條目的名稱和坐標，從而建立新的導航。</p>
+</div><br />智慧型手錶的歷史 << <a href='智慧型手錶的歷史.html'>Previous</a> <a href='系統區別.html'>Next</a> >> 系統區別</div>
         
     <!-- footer -->
       <div class="container">
