--- a/content/智慧型手錶的歷史.html
+++ b/content/智慧型手錶的歷史.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='有關本網站.html'>有關本網站</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Google Blogger.html'>Google Blogger</a><li><a href='WCM.html'>WCM</a><li class='has-children'><a href='Git.html'>Git</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></li></ul></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3建立可攜式環境.html'>w3建立可攜式環境</a><li><a href='w4建網站.html'>w4建網站</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7-8.html'>w7-8</a><li><a href='w9期中考.html'>w9期中考</a><li><a href='w10-12如何用ssh.html'>w10-12如何用ssh</a><li><a href='W13.html'>W13</a><li><a href='w14.html'>w14</a><li><a href='w15-18統整.html'>w15-18統整</a></li></ul><li class='has-children'><a href='分組主題報告.html'>分組主題報告</a><ul class='dropdown'><li class='has-children'><a href='智慧型手錶.html'>智慧型手錶</a><ul class='dropdown'><li><a href='智慧型手錶的歷史.html'>智慧型手錶的歷史</a></li></ul><li class='has-children'><a href='系統區別.html'>系統區別</a><ul class='dropdown'><li><a href='Android.html'>Android</a><li><a href='watchOS.html'>watchOS</a></li></ul><li><a href='現代智慧型手錶名單.html'>現代智慧型手錶名單</a><li><a href='通俗文化.html'>通俗文化</a></li>
+                     <li class='has-children'><a href='有關本網站.html'>有關本網站</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Google Blogger.html'>Google Blogger</a><li><a href='WCM.html'>WCM</a><li class='has-children'><a href='Git.html'>Git</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></li></ul></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3建立可攜式環境.html'>w3建立可攜式環境</a><li><a href='w4建網站.html'>w4建網站</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7-8.html'>w7-8</a><li><a href='w9期中考.html'>w9期中考</a><li><a href='w10-12如何用ssh.html'>w10-12如何用ssh</a><li><a href='W13.html'>W13</a><li><a href='w14.html'>w14</a><li><a href='w15-18統整.html'>w15-18統整</a></li></ul><li class='has-children'><a href='分組報告主題.html'>分組報告主題</a><ul class='dropdown'><li class='has-children'><a href='智慧型手錶.html'>智慧型手錶</a><ul class='dropdown'><li><a href='智慧型手錶的歷史.html'>智慧型手錶的歷史</a></li></ul><li><a href='功能.html'>功能</a><li class='has-children'><a href='系統區別.html'>系統區別</a><ul class='dropdown'><li><a href='Android.html'>Android</a><li><a href='watchOS.html'>watchOS</a></li></ul><li><a href='現代智慧型手錶名單.html'>現代智慧型手錶名單</a><li><a href='通俗文化.html'>通俗文化</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">智慧型手錶 << <a href='智慧型手錶.html'>Previous</a> <a href='系統區別.html'>Next</a> >> 系統區別<br /><h1>智慧型手錶的歷史</h1>
-<h4 class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql"><br/>早期</h4>
+    <div id="tipue_search_content">智慧型手錶 << <a href='智慧型手錶.html'>Previous</a> <a href='功能.html'>Next</a> >> 功能<br /><h1>智慧型手錶的歷史</h1>
+<h4>早期</h4>
 <div class="o9v6fnle cxmmr5t8 oygrvhab hcukyx3x c1et5uql">
 <p></p>
 <p></p>
@@ -166,22 +166,10 @@ img.add_border {
 <p></p>
 <p></p>
 <p></p>
-<p><br/>1972年，第一個開發手腕計算技術的日本精工公司，首次發表第一款數位手錶，稱脈波星，由漢彌爾頓鐘錶公司所製造。「脈波星」被精工在1978年收購後成為一個品牌的名字。<br/>1982年，脈波星手錶（NL C01）發布，它可以儲存24個數位，使其成為可能是第一款用戶可自我編寫記憶體的手錶，或者叫做「記憶銀行」手錶。<br/>1983年，隨著個人電腦在20世紀80年代被引進，精工開始發展手錶的計算能力。2000資料手錶（1983年）有著一個外部鍵盤。資料通過鍵盤輸入進手錶。它的名字源於它能夠儲存2000個字元。D409是精工第一款直接在主機板上輸入資料的模式（通過一個微型鍵盤）和獨特的點陣顯示。Its memory was tiny, at only 112 digits.它於1984年發布的金、銀和黑色三個版本。在20世紀80年代最引人注目的是精工的「RC系列」：從1980年代開始，卡西歐除了做成計算機手錶外，還成功的做成了「電腦手錶」。最引人注目的是卡西歐資料銀行系列。此公司也生產例如Nelsonic遊戲手錶等一些「遊戲手錶」。<br/>精工RC系列<br/>1984年，精工發布第一個與電腦有關的模型，RC-1000腕部終端它相容於當時最流行的電腦，包括蘋果II代、II+代及IIe、the Commodore 64、IBM PC、NEC 8201、Tandy Color Computer、Model 1000、1200、2000和TRS-80 Model I、III、4及4p。<br/>1985年，精工發布第二個RC-20腕部電腦，它有著SMC84C00 8-位 Z-80 微處理器；8K的ROM和2K的RAM。他有著日程、備忘錄、世界時間和四種功能的計算機應用程式。它有著42x32像素的點陣式液晶顯示，並且更重要的是它是觸控式螢幕。同樣相似於RC-1000，它可以通過專用電纜連接到個人電腦。它是可程式化的，但是它的顯示器過小和儲存空間不足嚴重限制了應用程式的開發。<br/>1985年，而RC-4000 PC資料圖同樣於1985年發布，被稱為「世界上最小的電腦終端」。他有著2K的儲存空間。RC-4500（1985年），也被稱為腕部MAC，它有著鮮艷、明亮的顏色。</p>
-<h4><br/>功能</h4>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p><br/>GPS功能<br/>GPS跟蹤裝置可以用來完成歷史資料的記錄，然後將資料上傳到電腦或網際網路上並建立一個紀錄檔進行之前練習活動的分析。<br/>此外，一些智慧型手錶有著全GPS導航儀，它擁有一個可以即時顯示地圖及當前坐標的螢幕，使用hh.mm.mmmm（小時，分鐘和分鐘的小數位）與GPS坐標格式。用戶可以通過「Mark（標記）」他們的當前位置，然後編輯這個條目的名稱和坐標，從而建立新的導航。</p>
-<br />智慧型手錶 << <a href='智慧型手錶.html'>Previous</a> <a href='系統區別.html'>Next</a> >> 系統區別</div>
+<p><br/>1972年，第一個開發手腕計算技術的日本精工公司，首次發表第一款數位手錶，稱脈波星，由漢彌爾頓鐘錶公司所製造。「脈波星」被精工在1978年收購後成為一個品牌的名字。<br/>1982年，脈波星手錶（NL C01）發布，它可以儲存24個數位，使其成為可能是第一款用戶可自我編寫記憶體的手錶，或者叫做「記憶銀行」手錶。<br/>1983年，隨著個人電腦在20世紀80年代被引進，精工開始發展手錶的計算能力。2000資料手錶（1983年）有著一個外部鍵盤。資料通過鍵盤輸入進手錶。它的名字源於它能夠儲存2000個字元。D409是精工第一款直接在主機板上輸入資料的模式（通過一個微型鍵盤）和獨特的點陣顯示。Its memory was tiny, at only 112 digits.它於1984年發布的金、銀和黑色三個版本。在20世紀80年代最引人注目的是精工的「RC系列」：從1980年代開始，卡西歐除了做成計算機手錶外，還成功的做成了「電腦手錶」。最引人注目的是卡西歐資料銀行系列。此公司也生產例如Nelsonic遊戲手錶等一些「遊戲手錶」。</p>
+<h4>精工RC系列</h4>
+<p>1984年，精工發布第一個與電腦有關的模型，RC-1000腕部終端它相容於當時最流行的電腦，包括蘋果II代、II+代及IIe、the Commodore 64、IBM PC、NEC 8201、Tandy Color Computer、Model 1000、1200、2000和TRS-80 Model I、III、4及4p。<br/>1985年，精工發布第二個RC-20腕部電腦，它有著SMC84C00 8-位 Z-80 微處理器；8K的ROM和2K的RAM。他有著日程、備忘錄、世界時間和四種功能的計算機應用程式。它有著42x32像素的點陣式液晶顯示，並且更重要的是它是觸控式螢幕。同樣相似於RC-1000，它可以通過專用電纜連接到個人電腦。它是可程式化的，但是它的顯示器過小和儲存空間不足嚴重限制了應用程式的開發。<br/>1985年，而RC-4000 PC資料圖同樣於1985年發布，被稱為「世界上最小的電腦終端」。他有著2K的儲存空間。RC-4500（1985年），也被稱為腕部MAC，它有著鮮艷、明亮的顏色。</p>
+</div><br />智慧型手錶 << <a href='智慧型手錶.html'>Previous</a> <a href='功能.html'>Next</a> >> 功能</div>
         
     <!-- footer -->
       <div class="container">
