--- a/content/通俗文化.html
+++ b/content/通俗文化.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='有關本網站.html'>有關本網站</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Google Blogger.html'>Google Blogger</a><li><a href='WCM.html'>WCM</a><li class='has-children'><a href='Git.html'>Git</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></li></ul></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3建立可攜式環境.html'>w3建立可攜式環境</a><li><a href='w4建網站.html'>w4建網站</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7-8.html'>w7-8</a><li><a href='w9期中考.html'>w9期中考</a><li><a href='w10-12如何用ssh.html'>w10-12如何用ssh</a><li><a href='W13.html'>W13</a><li><a href='w14.html'>w14</a><li><a href='w15-18統整.html'>w15-18統整</a></li></ul><li class='has-children'><a href='分組主題報告.html'>分組主題報告</a><ul class='dropdown'><li class='has-children'><a href='智慧型手錶.html'>智慧型手錶</a><ul class='dropdown'><li><a href='智慧型手錶的歷史.html'>智慧型手錶的歷史</a></li></ul><li class='has-children'><a href='系統區別.html'>系統區別</a><ul class='dropdown'><li><a href='Android.html'>Android</a><li><a href='watchOS.html'>watchOS</a></li></ul><li><a href='現代智慧型手錶名單.html'>現代智慧型手錶名單</a><li><a href='通俗文化.html'>通俗文化</a></li>
+                     <li class='has-children'><a href='有關本網站.html'>有關本網站</a><ul class='dropdown'><li><a href='利用 cmsimde 建立靜態網誌方法.html'>利用 cmsimde 建立靜態網誌方法</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Cmsimde.html'>Cmsimde</a><ul class='dropdown'><li><a href='如何使用 CMSiMDE.html'>如何使用 CMSiMDE</a></li></li></ul></ul><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Google Blogger.html'>Google Blogger</a><li><a href='WCM.html'>WCM</a><li class='has-children'><a href='Git.html'>Git</a><ul class='dropdown'><li><a href='Github.html'>Github</a></li></li></ul></ul><li class='has-children'><a href='上課內容重點筆記.html'>上課內容重點筆記</a><ul class='dropdown'><li><a href='proxy.html'>proxy</a><li><a href='NAT.html'>NAT</a><li class='has-children'><a href='電腦之硬體設備.html'>電腦之硬體設備</a><ul class='dropdown'><li><a href='CPU.html'>CPU</a><li><a href='記憶體RAM.html'>記憶體RAM</a><li><a href='硬碟.html'>硬碟</a></li></ul><li class='has-children'><a href='IPv4與IPv6之差別.html'>IPv4與IPv6之差別</a><ul class='dropdown'><li><a href='IPv4.html'>IPv4</a><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='紙本筆記.html'>紙本筆記</a></li></ul><li class='has-children'><a href='課程進度.html'>課程進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3建立可攜式環境.html'>w3建立可攜式環境</a><li><a href='w4建網站.html'>w4建網站</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w7-8.html'>w7-8</a><li><a href='w9期中考.html'>w9期中考</a><li><a href='w10-12如何用ssh.html'>w10-12如何用ssh</a><li><a href='W13.html'>W13</a><li><a href='w14.html'>w14</a><li><a href='w15-18統整.html'>w15-18統整</a></li></ul><li class='has-children'><a href='分組報告主題.html'>分組報告主題</a><ul class='dropdown'><li class='has-children'><a href='智慧型手錶.html'>智慧型手錶</a><ul class='dropdown'><li><a href='智慧型手錶的歷史.html'>智慧型手錶的歷史</a></li></ul><li><a href='功能.html'>功能</a><li class='has-children'><a href='系統區別.html'>系統區別</a><ul class='dropdown'><li><a href='Android.html'>Android</a><li><a href='watchOS.html'>watchOS</a></li></ul><li><a href='現代智慧型手錶名單.html'>現代智慧型手錶名單</a><li><a href='通俗文化.html'>通俗文化</a></li>
                       </ul>
                 </nav>
               </div>
@@ -160,13 +160,8 @@ img.add_border {
 <p></p>
 <p></p>
 <p></p>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div><br />現代智慧型手錶名單 << <a href='現代智慧型手錶名單.html'>Previous</a> </div>
+</div></div></div></div></div>
+<br />現代智慧型手錶名單 << <a href='現代智慧型手錶名單.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
